--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <title>La Vie</title>
 </head>
 <body>
+<!-- ------------------------------------------ mouse-cursor-custom -------------------------------------------- -->
+<div class="mouse-cursor-custom"></div>
+<div class="mouse-cursor-custom-follow"></div>
 <!-- ------------------------------------------ loading-section -------------------------------------------- -->
     <div id="loader">
         <div class="loader-overlaytext">
@@ -107,10 +110,27 @@
                     <p>&copy; 2023 La Vie Design Studio LLP. All rights reserved.</p>
                 </div>
                 <div class="footer-section-bottom-container-img-container">
-                    <a href="mailto:hello@laviedesignstudio.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
-                    <a href="https://dribbble.com/laviedesignstudio" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
-                    <a href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
-                    <a href="https://medium.com/@lavinachhabra" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
+                    <a class="footer-link" href="mailto:hello@laviedesignstudio.com" target="_blank">
+                        <svg width="31" height="25" viewBox="0 0 31 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M30.9159 3.24935C30.9159 1.55352 29.5284 0.166016 27.8326 0.166016H3.16594C1.47011 0.166016 0.0826111 1.55352 0.0826111 3.24935V21.7493C0.0826111 23.4452 1.47011 24.8327 3.16594 24.8327H27.8326C29.5284 24.8327 30.9159 23.4452 30.9159 21.7493V3.24935ZM27.8326 3.24935L15.4993 10.9577L3.16594 3.24935H27.8326ZM27.8326 21.7493H3.16594V6.33268L15.4993 14.041L27.8326 6.33268V21.7493Z" fill="white"/>
+                        </svg>                            
+                    </a>
+                    <a class="footer-link" href="https://dribbble.com/laviedesignstudio" target="_blank">
+                        <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M30.5305 15.6014V15.5002C30.5291 13.2695 30.0316 11.0671 29.0743 9.05237C28.1169 7.03761 26.7235 5.26095 24.995 3.85098L24.9082 3.77872L24.8071 3.70645C22.6004 1.96272 19.9488 0.873068 17.1536 0.561361C14.3585 0.249653 11.5319 0.728398 8.99535 1.94317L8.80746 2.04434C6.75691 3.06725 4.96627 4.54375 3.5714 6.36184C2.17654 8.17992 1.21408 10.2918 0.757066 12.5373V12.5662C0.201547 15.3435 0.444333 18.2213 1.45729 20.8663C2.47026 23.5112 4.21193 25.815 6.4805 27.5107L6.66839 27.6553H6.68285C8.6454 29.0782 10.923 30.0054 13.3214 30.3577C15.7198 30.7101 18.1678 30.4771 20.4567 29.6787L20.6157 29.6209C23.4953 28.5743 25.9871 26.6743 27.7587 24.1745C29.5303 21.6747 30.4972 18.694 30.5305 15.6303V15.6014ZM28.1602 14.3729L27.0618 14.344C24.9193 14.3457 22.7862 14.6275 20.7168 15.1822C20.2097 13.6859 19.5561 12.2432 18.7657 10.8752C20.8229 9.6358 22.6837 8.09647 24.2868 6.30801C26.5164 8.43532 27.8936 11.3028 28.1602 14.3729ZM22.4801 4.87716C21.0363 6.4633 19.3658 7.82703 17.5227 8.92403C15.9752 6.7551 14.0862 4.85148 11.9293 3.28731C13.6983 2.77335 15.5577 2.64932 17.3793 2.9238C19.2008 3.19829 20.9411 3.86473 22.4801 4.87716ZM9.37113 4.35684C11.7398 5.84312 13.8046 7.76573 15.4559 10.0225C12.5666 11.3445 9.42668 12.0297 6.24925 12.0315C5.26785 12.0293 4.28768 11.9617 3.31527 11.8291C4.2849 8.64536 6.45727 5.9649 9.37113 4.35684ZM2.7805 15.5002C2.7805 15.0232 2.80941 14.5607 2.85277 14.1127C3.97884 14.2621 5.11332 14.3394 6.24925 14.344C9.87559 14.3491 13.4567 13.539 16.7278 11.9736C17.4485 13.2172 18.044 14.5292 18.5055 15.8904C17.2793 16.3577 16.0906 16.9182 14.95 17.567C11.7804 19.4021 9.06369 21.9262 7.00082 24.9525C5.67327 23.7615 4.61139 22.3043 3.88426 20.6757C3.15713 19.0471 2.78106 17.2837 2.7805 15.5002ZM8.85082 26.34C11.3557 22.6109 14.949 19.7444 19.1414 18.1307C19.4937 19.7206 19.673 21.344 19.6762 22.9725C19.6755 24.5518 19.5059 26.1265 19.1703 27.6697C17.9814 28.037 16.7437 28.2222 15.4993 28.2189C13.1522 28.2181 10.8511 27.5678 8.85082 26.34ZM21.7285 26.5857C21.9025 25.3892 21.9894 24.1816 21.9887 22.9725C21.9875 21.0996 21.7742 19.2329 21.3528 17.408C23.2152 16.9114 25.1342 16.6587 27.0618 16.6565L28.1602 16.6854C27.9671 18.7322 27.2812 20.7019 26.1611 22.426C25.0411 24.1501 23.5202 25.5774 21.7285 26.5857Z" fill="white"/>
+                        </svg>                            
+                    </a>
+                    <a class="footer-link" href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank">
+                        <svg width="28" height="29" viewBox="0 0 28 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.88667 28.0094H0.0959473V8.70703H5.88667V28.0094ZM27.1193 28.0094H21.3286V17.6981C21.3286 15.0112 20.3712 13.6735 18.4738 13.6735C16.9701 13.6735 16.0166 14.4225 15.5379 15.9223V28.0094H9.74715C9.74715 28.0094 9.82436 10.6373 9.74715 8.70703H14.318L14.6712 12.5675H14.7909C15.978 10.6373 17.8754 9.32857 20.4774 9.32857C22.4559 9.32857 24.056 9.87869 25.2779 11.2607C26.5074 12.6447 27.1193 14.5016 27.1193 17.1094V28.0094Z" fill="white"/>
+                            <path d="M2.99114 6.78095C4.6435 6.78095 5.98301 5.48466 5.98301 3.88559C5.98301 2.28653 4.6435 0.990234 2.99114 0.990234C1.33877 0.990234 -0.000732422 2.28653 -0.000732422 3.88559C-0.000732422 5.48466 1.33877 6.78095 2.99114 6.78095Z" fill="white"/>
+                        </svg>                            
+                    </a>
+                    <a class="footer-link" href="https://medium.com/@lavinachhabra" target="_blank">
+                        <svg width="31" height="25" viewBox="0 0 31 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M28.5399 3.20293L30.9943 0.844629V0.328125H22.494L16.4361 15.4789L9.54534 0.328125H0.632641V0.844629L3.49944 4.31201C3.77971 4.56826 3.92385 4.94463 3.88782 5.321V18.9463C3.9759 19.4388 3.81975 19.9393 3.47541 20.2956L0.244263 24.2314V24.7399H9.39719V24.2234L6.17004 20.2996C5.99714 20.1241 5.86707 19.911 5.78999 19.6769C5.7129 19.4429 5.69087 19.1942 5.72561 18.9503V7.16279L13.7615 24.7479H14.6944L21.6051 7.16279V21.1725C21.6051 21.5408 21.6051 21.6169 21.3649 21.8611L18.8784 24.2755V24.792H30.9382V24.2755L28.5399 21.9172C28.3317 21.757 28.2236 21.4888 28.2676 21.2285V3.8916C28.2469 3.76294 28.2612 3.63106 28.3091 3.50986C28.357 3.38867 28.4368 3.28263 28.5399 3.20293Z" fill="white"/>
+                        </svg>                            
+                    </a>
                 </div>
             </div>
             <!-- <button id="contactCloseBtn">close</button> -->
@@ -125,9 +145,6 @@
             Contact Us
         </button>
     </nav>
-<!-- ------------------------------------------ mouse-cursor -------------------------------------------- -->
-    <div class="mouse-cursor"></div>
-    <div class="mouse-cursor-follow"></div>
 <!-- ------------------------------------------ Hero-Section -------------------------------------------- -->
     <main id="hero-section">
         <div class="hero-section-top-container">
@@ -488,11 +505,34 @@
                 <div class="footer-section-bottom-container-copy-container">
                     <p>&copy; 2023 La Vie Design Studio LLP. All rights reserved.</p>
                 </div>
-                <div class="footer-section-bottom-container-img-container">
+                <!-- <div class="footer-section-bottom-container-img-container">
                     <a href="mailto:hello@laviedesignstudio.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
                     <a href="https://dribbble.com/laviedesignstudio" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
                     <a href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
                     <a href="https://medium.com/@lavinachhabra" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
+                </div> -->
+                <div class="footer-section-bottom-container-img-container">
+                    <a class="footer-link" href="mailto:hello@laviedesignstudio.com" target="_blank">
+                        <svg width="31" height="25" viewBox="0 0 31 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M30.9159 3.24935C30.9159 1.55352 29.5284 0.166016 27.8326 0.166016H3.16594C1.47011 0.166016 0.0826111 1.55352 0.0826111 3.24935V21.7493C0.0826111 23.4452 1.47011 24.8327 3.16594 24.8327H27.8326C29.5284 24.8327 30.9159 23.4452 30.9159 21.7493V3.24935ZM27.8326 3.24935L15.4993 10.9577L3.16594 3.24935H27.8326ZM27.8326 21.7493H3.16594V6.33268L15.4993 14.041L27.8326 6.33268V21.7493Z" fill="white"/>
+                        </svg>                            
+                    </a>
+                    <a class="footer-link" href="https://dribbble.com/laviedesignstudio" target="_blank">
+                        <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M30.5305 15.6014V15.5002C30.5291 13.2695 30.0316 11.0671 29.0743 9.05237C28.1169 7.03761 26.7235 5.26095 24.995 3.85098L24.9082 3.77872L24.8071 3.70645C22.6004 1.96272 19.9488 0.873068 17.1536 0.561361C14.3585 0.249653 11.5319 0.728398 8.99535 1.94317L8.80746 2.04434C6.75691 3.06725 4.96627 4.54375 3.5714 6.36184C2.17654 8.17992 1.21408 10.2918 0.757066 12.5373V12.5662C0.201547 15.3435 0.444333 18.2213 1.45729 20.8663C2.47026 23.5112 4.21193 25.815 6.4805 27.5107L6.66839 27.6553H6.68285C8.6454 29.0782 10.923 30.0054 13.3214 30.3577C15.7198 30.7101 18.1678 30.4771 20.4567 29.6787L20.6157 29.6209C23.4953 28.5743 25.9871 26.6743 27.7587 24.1745C29.5303 21.6747 30.4972 18.694 30.5305 15.6303V15.6014ZM28.1602 14.3729L27.0618 14.344C24.9193 14.3457 22.7862 14.6275 20.7168 15.1822C20.2097 13.6859 19.5561 12.2432 18.7657 10.8752C20.8229 9.6358 22.6837 8.09647 24.2868 6.30801C26.5164 8.43532 27.8936 11.3028 28.1602 14.3729ZM22.4801 4.87716C21.0363 6.4633 19.3658 7.82703 17.5227 8.92403C15.9752 6.7551 14.0862 4.85148 11.9293 3.28731C13.6983 2.77335 15.5577 2.64932 17.3793 2.9238C19.2008 3.19829 20.9411 3.86473 22.4801 4.87716ZM9.37113 4.35684C11.7398 5.84312 13.8046 7.76573 15.4559 10.0225C12.5666 11.3445 9.42668 12.0297 6.24925 12.0315C5.26785 12.0293 4.28768 11.9617 3.31527 11.8291C4.2849 8.64536 6.45727 5.9649 9.37113 4.35684ZM2.7805 15.5002C2.7805 15.0232 2.80941 14.5607 2.85277 14.1127C3.97884 14.2621 5.11332 14.3394 6.24925 14.344C9.87559 14.3491 13.4567 13.539 16.7278 11.9736C17.4485 13.2172 18.044 14.5292 18.5055 15.8904C17.2793 16.3577 16.0906 16.9182 14.95 17.567C11.7804 19.4021 9.06369 21.9262 7.00082 24.9525C5.67327 23.7615 4.61139 22.3043 3.88426 20.6757C3.15713 19.0471 2.78106 17.2837 2.7805 15.5002ZM8.85082 26.34C11.3557 22.6109 14.949 19.7444 19.1414 18.1307C19.4937 19.7206 19.673 21.344 19.6762 22.9725C19.6755 24.5518 19.5059 26.1265 19.1703 27.6697C17.9814 28.037 16.7437 28.2222 15.4993 28.2189C13.1522 28.2181 10.8511 27.5678 8.85082 26.34ZM21.7285 26.5857C21.9025 25.3892 21.9894 24.1816 21.9887 22.9725C21.9875 21.0996 21.7742 19.2329 21.3528 17.408C23.2152 16.9114 25.1342 16.6587 27.0618 16.6565L28.1602 16.6854C27.9671 18.7322 27.2812 20.7019 26.1611 22.426C25.0411 24.1501 23.5202 25.5774 21.7285 26.5857Z" fill="white"/>
+                        </svg>                            
+                    </a>
+                    <a class="footer-link" href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank">
+                        <svg width="28" height="29" viewBox="0 0 28 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.88667 28.0094H0.0959473V8.70703H5.88667V28.0094ZM27.1193 28.0094H21.3286V17.6981C21.3286 15.0112 20.3712 13.6735 18.4738 13.6735C16.9701 13.6735 16.0166 14.4225 15.5379 15.9223V28.0094H9.74715C9.74715 28.0094 9.82436 10.6373 9.74715 8.70703H14.318L14.6712 12.5675H14.7909C15.978 10.6373 17.8754 9.32857 20.4774 9.32857C22.4559 9.32857 24.056 9.87869 25.2779 11.2607C26.5074 12.6447 27.1193 14.5016 27.1193 17.1094V28.0094Z" fill="white"/>
+                            <path d="M2.99114 6.78095C4.6435 6.78095 5.98301 5.48466 5.98301 3.88559C5.98301 2.28653 4.6435 0.990234 2.99114 0.990234C1.33877 0.990234 -0.000732422 2.28653 -0.000732422 3.88559C-0.000732422 5.48466 1.33877 6.78095 2.99114 6.78095Z" fill="white"/>
+                        </svg>                            
+                    </a>
+                    <a class="footer-link" href="https://medium.com/@lavinachhabra" target="_blank">
+                        <svg width="31" height="25" viewBox="0 0 31 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M28.5399 3.20293L30.9943 0.844629V0.328125H22.494L16.4361 15.4789L9.54534 0.328125H0.632641V0.844629L3.49944 4.31201C3.77971 4.56826 3.92385 4.94463 3.88782 5.321V18.9463C3.9759 19.4388 3.81975 19.9393 3.47541 20.2956L0.244263 24.2314V24.7399H9.39719V24.2234L6.17004 20.2996C5.99714 20.1241 5.86707 19.911 5.78999 19.6769C5.7129 19.4429 5.69087 19.1942 5.72561 18.9503V7.16279L13.7615 24.7479H14.6944L21.6051 7.16279V21.1725C21.6051 21.5408 21.6051 21.6169 21.3649 21.8611L18.8784 24.2755V24.792H30.9382V24.2755L28.5399 21.9172C28.3317 21.757 28.2236 21.4888 28.2676 21.2285V3.8916C28.2469 3.76294 28.2612 3.63106 28.3091 3.50986C28.357 3.38867 28.4368 3.28263 28.5399 3.20293Z" fill="white"/>
+                        </svg>                            
+                    </a>
                 </div>
             </div>
         </div>
