--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="ux design, user experience design, design agency, best design agency, product design, SAAS product, graphic design, website design, landing pages, expert ux designers, ui design, mobile app design, responsive design, branding, design systems, figma, conversion rate optimization, ui/ux design, logo design, creative agency, visual identity, user research, prototyping, interaction design"></meta>
+    <meta name="author" content="La Vie Design Studio"></meta>
+    <meta name="description" content="La Vie Design Studio is a full-service creative agency specializing in UI/UX design, web design, graphic design, and branding. Our team of expert designers creates visually stunning and highly functional websites, mobile apps, and logos that engage and delight users. With a focus on user experience and digital strategy, we help businesses build their brands and increase their online presence. Contact us today to learn how we can help you elevate your design game."></meta>
+    <meta property="og:title" content="La Vie Design Studio"></meta>
+    <meta property="og:type" content="website"></meta>
+    <meta property="og:url" content="https://laviedesignstudio.com/"></meta>
+    
     <script
 			  src="https://code.jquery.com/jquery-3.6.3.min.js"
 			  integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
